--- a/docs/en/cost_management/architecture.mdx
+++ b/docs/en/cost_management/architecture.mdx
@@ -9,7 +9,7 @@ sourceSHA: 65711656e6ba29eeb185fcffd2f18cf12055a3459fd48453eb855133ba7d768d
 
 The platform provides overall metering and billing capabilities through the cooperation of **Alauda Container Platform Cost Management Server**, **Alauda Container Platform Cost Management Essentials** and **Alauda Container Platform Cost Management Agent** components:
 
-- **Alauda Container Platform Cost Management Server**: You need to install this plugin in arbitrary cluster in order to use the platform's metering and billing functions.
+- **Alauda Container Platform Cost Management Server**: You need to install this plugin in arbitrary cluster but only one in order to use the platform's metering and billing functions.
 
   - Interfaces with Clickhouse, responsible for receiving data reported by clients and storing it in the Clickhouse database, with no time limit on data storage.
 
@@ -20,8 +20,6 @@ The platform provides overall metering and billing capabilities through the coop
 - **Alauda Container Platform Cost Management Essentials**: You need to install this plugin in the `global` cluster in order to use the platform's metering and billing UI and API functions.
 
   - Provides an API for querying metering and billing data.
-
-  - Offers the ability to modify unit prices and currency unit configurations.
 
   - Connects to **Alauda Container Platform Cost Management Server**, obtains the metering and billing data for UI.
 
