--- a/docs/en/cost_management/howto/gpu/vgpu_cost_model.mdx
+++ b/docs/en/cost_management/howto/gpu/vgpu_cost_model.mdx
@@ -274,7 +274,7 @@ metadata:
 After adding the yaml , you need to restart the Server Pod to reload the configurations.
 
 ```bash
-kubectl delete pods -n cpaas-system -l service_name=slark
+kubectl delete pods -n cpaas-system -l service_name=slark-server
 ```
 
 ## Add Price For a vGPU Cost Model
