--- a/docs/en/cost_management/howto/gpu/pgpu_cost_model.mdx
+++ b/docs/en/cost_management/howto/gpu/pgpu_cost_model.mdx
@@ -105,7 +105,7 @@ kind: ConfigMap
 metadata:
   labels:
     cpaas.io/slark.collection.config: "true"
-  name: slark-agent-project-config-vgpu
+  name: slark-agent-project-config-pgpu
   namespace: cpaas-system
 ```
 
@@ -157,7 +157,7 @@ metadata:
 After adding the yaml , you need to restart the Server Pod to reload the configurations.
 
 ```bash
-kubectl delete pods -n cpaas-system -l service_name=slark
+kubectl delete pods -n cpaas-system -l service_name=slark-server
 ```
 
 ## Add Price For a pGPU Cost Model
